dsl/.antlr/PascalishParser.java
// Generated from c:/dev/pulse-new-repo/dsl/Pascalish.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class PascalishParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PROGRAM=1, BEGIN=2, END=3, CONST=4, TYPE=5, VAR=6, PROCEDURE=7, FUNCTION=8, 
		IF=9, THEN=10, ELSE=11, WHILE=12, DO=13, FOR=14, TO=15, DOWNTO=16, REPEAT=17, 
		UNTIL=18, CASE=19, OF=20, ARRAY=21, RECORD=22, OBJECT=23, METHOD=24, LIBRARY=25, 
		FROM=26, INTEROP=27, AS=28, QUEUE=29, GATEWAY=30, COBEGIN=31, COEND=32, 
		WAIT=33, SIGNAL=34, NOT=35, OR=36, AND=37, DIV=38, MOD=39, INTEGER=40, 
		REAL=41, BOOLEAN=42, STRING=43, WFL=44, COBOLISH=45, PASCALISH=46, PLUS=47, 
		MINUS=48, STAR=49, SLASH=50, EQUALS=51, NOTEQUALS=52, LT=53, LE=54, GT=55, 
		GE=56, ASSIGN=57, LPAREN=58, RPAREN=59, LBRACKET=60, RBRACKET=61, DOT=62, 
		DOTDOT=63, COMMA=64, SEMICOLON=65, COLON=66, IDENTIFIER=67, INTEGER_LITERAL=68, 
		REAL_LITERAL=69, STRING_LITERAL=70, COMMENT=71, LINE_COMMENT=72, BLOCK_COMMENT=73, 
		WS=74;
	public static final int
		RULE_program = 0, RULE_block = 1, RULE_declarations = 2, RULE_constDecl = 3, 
		RULE_typeDecl = 4, RULE_type = 5, RULE_simpleType = 6, RULE_structuredType = 7, 
		RULE_arrayType = 8, RULE_recordType = 9, RULE_fieldDeclList = 10, RULE_fieldDecl = 11, 
		RULE_objectType = 12, RULE_objectBody = 13, RULE_methodDecl = 14, RULE_varDecl = 15, 
		RULE_procDecl = 16, RULE_paramList = 17, RULE_param = 18, RULE_libraryDecl = 19, 
		RULE_interopDecl = 20, RULE_languageId = 21, RULE_compoundStatement = 22, 
		RULE_statementList = 23, RULE_statement = 24, RULE_assignment = 25, RULE_ifStatement = 26, 
		RULE_whileStatement = 27, RULE_forStatement = 28, RULE_repeatStatement = 29, 
		RULE_caseStatement = 30, RULE_caseList = 31, RULE_caseItem = 32, RULE_constantList = 33, 
		RULE_procedureCall = 34, RULE_queueStatement = 35, RULE_gatewayCall = 36, 
		RULE_cobeginStatement = 37, RULE_semaphoreStatement = 38, RULE_semWait = 39, 
		RULE_semSignal = 40, RULE_expressionList = 41, RULE_expression = 42, RULE_simpleExpression = 43, 
		RULE_term = 44, RULE_factor = 45, RULE_functionCall = 46, RULE_fieldAccess = 47, 
		RULE_arrayAccess = 48, RULE_variable = 49, RULE_relop = 50, RULE_addop = 51, 
		RULE_mulop = 52, RULE_sign = 53, RULE_identifierList = 54, RULE_identifier = 55, 
		RULE_number = 56, RULE_stringLiteral = 57, RULE_constant = 58;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "block", "declarations", "constDecl", "typeDecl", "type", 
			"simpleType", "structuredType", "arrayType", "recordType", "fieldDeclList", 
			"fieldDecl", "objectType", "objectBody", "methodDecl", "varDecl", "procDecl", 
			"paramList", "param", "libraryDecl", "interopDecl", "languageId", "compoundStatement", 
			"statementList", "statement", "assignment", "ifStatement", "whileStatement", 
			"forStatement", "repeatStatement", "caseStatement", "caseList", "caseItem", 
			"constantList", "procedureCall", "queueStatement", "gatewayCall", "cobeginStatement", 
			"semaphoreStatement", "semWait", "semSignal", "expressionList", "expression", 
			"simpleExpression", "term", "factor", "functionCall", "fieldAccess", 
			"arrayAccess", "variable", "relop", "addop", "mulop", "sign", "identifierList", 
			"identifier", "number", "stringLiteral", "constant"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, "'+'", 
			"'-'", "'*'", "'/'", "'='", "'<>'", "'<'", "'<='", "'>'", "'>='", "':='", 
			"'('", "')'", "'['", "']'", "'.'", "'..'", "','", "';'", "':'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PROGRAM", "BEGIN", "END", "CONST", "TYPE", "VAR", "PROCEDURE", 
			"FUNCTION", "IF", "THEN", "ELSE", "WHILE", "DO", "FOR", "TO", "DOWNTO", 
			"REPEAT", "UNTIL", "CASE", "OF", "ARRAY", "RECORD", "OBJECT", "METHOD", 
			"LIBRARY", "FROM", "INTEROP", "AS", "QUEUE", "GATEWAY", "COBEGIN", "COEND", 
			"WAIT", "SIGNAL", "NOT", "OR", "AND", "DIV", "MOD", "INTEGER", "REAL", 
			"BOOLEAN", "STRING", "WFL", "COBOLISH", "PASCALISH", "PLUS", "MINUS", 
			"STAR", "SLASH", "EQUALS", "NOTEQUALS", "LT", "LE", "GT", "GE", "ASSIGN", 
			"LPAREN", "RPAREN", "LBRACKET", "RBRACKET", "DOT", "DOTDOT", "COMMA", 
			"SEMICOLON", "COLON", "IDENTIFIER", "INTEGER_LITERAL", "REAL_LITERAL", 
			"STRING_LITERAL", "COMMENT", "LINE_COMMENT", "BLOCK_COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Pascalish.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PascalishParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode PROGRAM() { return getToken(PascalishParser.PROGRAM, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(PascalishParser.SEMICOLON, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode DOT() { return getToken(PascalishParser.DOT, 0); }
		public TerminalNode EOF() { return getToken(PascalishParser.EOF, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(PROGRAM);
			setState(119);
			identifier();
			setState(120);
			match(SEMICOLON);
			setState(121);
			block();
			setState(122);
			match(DOT);
			setState(123);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlockContext extends ParserRuleContext {
		public DeclarationsContext declarations() {
			return getRuleContext(DeclarationsContext.class,0);
		}
		public CompoundStatementContext compoundStatement() {
			return getRuleContext(CompoundStatementContext.class,0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			declarations();
			setState(126);
			compoundStatement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationsContext extends ParserRuleContext {
		public List<ConstDeclContext> constDecl() {
			return getRuleContexts(ConstDeclContext.class);
		}
		public ConstDeclContext constDecl(int i) {
			return getRuleContext(ConstDeclContext.class,i);
		}
		public List<TypeDeclContext> typeDecl() {
			return getRuleContexts(TypeDeclContext.class);
		}
		public TypeDeclContext typeDecl(int i) {
			return getRuleContext(TypeDeclContext.class,i);
		}
		public List<VarDeclContext> varDecl() {
			return getRuleContexts(VarDeclContext.class);
		}
		public VarDeclContext varDecl(int i) {
			return getRuleContext(VarDeclContext.class,i);
		}
		public List<ProcDeclContext> procDecl() {
			return getRuleContexts(ProcDeclContext.class);
		}
		public ProcDeclContext procDecl(int i) {
			return getRuleContext(ProcDeclContext.class,i);
		}
		public List<LibraryDeclContext> libraryDecl() {
			return getRuleContexts(LibraryDeclContext.class);
		}
		public LibraryDeclContext libraryDecl(int i) {
			return getRuleContext(LibraryDeclContext.class,i);
		}
		public List<InteropDeclContext> interopDecl() {
			return getRuleContexts(InteropDeclContext.class);
		}
		public InteropDeclContext interopDecl(int i) {
			return getRuleContext(InteropDeclContext.class,i);
		}
		public DeclarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarations; }
	}

	public final DeclarationsContext declarations() throws RecognitionException {
		DeclarationsContext _localctx = new DeclarationsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declarations);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 167772400L) != 0)) {
				{
				setState(134);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case CONST:
					{
					setState(128);
					constDecl();
					}
					break;
				case TYPE:
					{
					setState(129);
					typeDecl();
					}
					break;
				case VAR:
					{
					setState(130);
					varDecl();
					}
					break;
				case PROCEDURE:
					{
					setState(131);
					procDecl();
					}
					break;
				case LIBRARY:
					{
					setState(132);
					libraryDecl();
					}
					break;
				case INTEROP:
					{
					setState(133);
					interopDecl();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(138);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConstDeclContext extends ParserRuleContext {
		public TerminalNode CONST() { return getToken(PascalishParser.CONST, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode EQUALS() { return getToken(PascalishParser.EQUALS, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(PascalishParser.SEMICOLON, 0); }
		public ConstDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constDecl; }
	}

	public final ConstDeclContext constDecl() throws RecognitionException {
		ConstDeclContext _localctx = new ConstDeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_constDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			match(CONST);
			setState(140);
			identifier();
			setState(141);
			match(EQUALS);
			setState(142);
			expression();
			setState(143);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeDeclContext extends ParserRuleContext {
		public TerminalNode TYPE() { return getToken(PascalishParser.TYPE, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode EQUALS() { return getToken(PascalishParser.EQUALS, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(PascalishParser.SEMICOLON, 0); }
		public TypeDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeDecl; }
	}

	public final TypeDeclContext typeDecl() throws RecognitionException {
		TypeDeclContext _localctx = new TypeDeclContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_typeDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			match(TYPE);
			setState(146);
			identifier();
			setState(147);
			match(EQUALS);
			setState(148);
			type();
			setState(149);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeContext extends ParserRuleContext {
		public SimpleTypeContext simpleType() {
			return getRuleContext(SimpleTypeContext.class,0);
		}
		public StructuredTypeContext structuredType() {
			return getRuleContext(StructuredTypeContext.class,0);
		}
		public ObjectTypeContext objectType() {
			return getRuleContext(ObjectTypeContext.class,0);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_type);
		try {
			setState(154);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INTEGER:
			case REAL:
			case BOOLEAN:
			case STRING:
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(151);
				simpleType();
				}
				break;
			case ARRAY:
			case RECORD:
				enterOuterAlt(_localctx, 2);
				{
				setState(152);
				structuredType();
				}
				break;
			case OBJECT:
				enterOuterAlt(_localctx, 3);
				{
				setState(153);
				objectType();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SimpleTypeContext extends ParserRuleContext {
		public TerminalNode INTEGER() { return getToken(PascalishParser.INTEGER, 0); }
		public TerminalNode REAL() { return getToken(PascalishParser.REAL, 0); }
		public TerminalNode BOOLEAN() { return getToken(PascalishParser.BOOLEAN, 0); }
		public TerminalNode STRING() { return getToken(PascalishParser.STRING, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public SimpleTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simpleType; }
	}

	public final SimpleTypeContext simpleType() throws RecognitionException {
		SimpleTypeContext _localctx = new SimpleTypeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_simpleType);
		try {
			setState(161);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INTEGER:
				enterOuterAlt(_localctx, 1);
				{
				setState(156);
				match(INTEGER);
				}
				break;
			case REAL:
				enterOuterAlt(_localctx, 2);
				{
				setState(157);
				match(REAL);
				}
				break;
			case BOOLEAN:
				enterOuterAlt(_localctx, 3);
				{
				setState(158);
				match(BOOLEAN);
				}
				break;
			case STRING:
				enterOuterAlt(_localctx, 4);
				{
				setState(159);
				match(STRING);
				}
				break;
			case IDENTIFIER:
				enterOuterAlt(_localctx, 5);
				{
				setState(160);
				identifier();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StructuredTypeContext extends ParserRuleContext {
		public ArrayTypeContext arrayType() {
			return getRuleContext(ArrayTypeContext.class,0);
		}
		public RecordTypeContext recordType() {
			return getRuleContext(RecordTypeContext.class,0);
		}
		public StructuredTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_structuredType; }
	}

	public final StructuredTypeContext structuredType() throws RecognitionException {
		StructuredTypeContext _localctx = new StructuredTypeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_structuredType);
		try {
			setState(165);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ARRAY:
				enterOuterAlt(_localctx, 1);
				{
				setState(163);
				arrayType();
				}
				break;
			case RECORD:
				enterOuterAlt(_localctx, 2);
				{
				setState(164);
				recordType();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ArrayTypeContext extends ParserRuleContext {
		public TerminalNode ARRAY() { return getToken(PascalishParser.ARRAY, 0); }
		public TerminalNode LBRACKET() { return getToken(PascalishParser.LBRACKET, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode DOTDOT() { return getToken(PascalishParser.DOTDOT, 0); }
		public TerminalNode RBRACKET() { return getToken(PascalishParser.RBRACKET, 0); }
		public TerminalNode OF() { return getToken(PascalishParser.OF, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ArrayTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrayType; }
	}

	public final ArrayTypeContext arrayType() throws RecognitionException {
		ArrayTypeContext _localctx = new ArrayTypeContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_arrayType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(167);
			match(ARRAY);
			setState(168);
			match(LBRACKET);
			setState(169);
			expression();
			setState(170);
			match(DOTDOT);
			setState(171);
			expression();
			setState(172);
			match(RBRACKET);
			setState(173);
			match(OF);
			setState(174);
			type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RecordTypeContext extends ParserRuleContext {
		public TerminalNode RECORD() { return getToken(PascalishParser.RECORD, 0); }
		public FieldDeclListContext fieldDeclList() {
			return getRuleContext(FieldDeclListContext.class,0);
		}
		public TerminalNode END() { return getToken(PascalishParser.END, 0); }
		public RecordTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_recordType; }
	}

	public final RecordTypeContext recordType() throws RecognitionException {
		RecordTypeContext _localctx = new RecordTypeContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_recordType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(176);
			match(RECORD);
			setState(177);
			fieldDeclList();
			setState(178);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FieldDeclListContext extends ParserRuleContext {
		public List<FieldDeclContext> fieldDecl() {
			return getRuleContexts(FieldDeclContext.class);
		}
		public FieldDeclContext fieldDecl(int i) {
			return getRuleContext(FieldDeclContext.class,i);
		}
		public FieldDeclListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldDeclList; }
	}

	public final FieldDeclListContext fieldDeclList() throws RecognitionException {
		FieldDeclListContext _localctx = new FieldDeclListContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_fieldDeclList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(183);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENTIFIER) {
				{
				{
				setState(180);
				fieldDecl();
				}
				}
				setState(185);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FieldDeclContext extends ParserRuleContext {
		public IdentifierListContext identifierList() {
			return getRuleContext(IdentifierListContext.class,0);
		}
		public TerminalNode COLON() { return getToken(PascalishParser.COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(PascalishParser.SEMICOLON, 0); }
		public FieldDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldDecl; }
	}

	public final FieldDeclContext fieldDecl() throws RecognitionException {
		FieldDeclContext _localctx = new FieldDeclContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_fieldDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(186);
			identifierList();
			setState(187);
			match(COLON);
			setState(188);
			type();
			setState(189);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
